[gd_scene load_steps=4 format=3 uid="uid://battleresult0001"]

[ext_resource type="Script" path="res://src/scenes/BattleResultScene.gd" id="1_scene"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.04, 0.04, 0.08, 0.95)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.12, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.2, 0.3, 1)
corner_radius_left_top = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_left_bottom = 8

[node name="BattleResult" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_scene")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 40.0
offset_right = -60.0
offset_bottom = -40.0
theme_override_constants/separation = 24

[node name="Header" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StationName" type="Label" parent="VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Station Alpha"
horizontal_alignment = 1

[node name="ResultTag" type="Label" parent="VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "VICTORY"
horizontal_alignment = 1

[node name="StatsPanel" type="PanelContainer" parent="VBox"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="VBox/StatsPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Margin" type="MarginContainer" parent="VBox/StatsPanel/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 16

[node name="CreditsRow" type="HBoxContainer" parent="VBox/StatsPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBox/StatsPanel/VBox/CreditsRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Credits Earned:"
horizontal_alignment = 2

[node name="Value" type="Label" parent="VBox/StatsPanel/VBox/CreditsRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "+0"

[node name="FacilitiesSavedRow" type="HBoxContainer" parent="VBox/StatsPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBox/StatsPanel/VBox/FacilitiesSavedRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Facilities Saved:"
horizontal_alignment = 2

[node name="Value" type="Label" parent="VBox/StatsPanel/VBox/FacilitiesSavedRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0"

[node name="FacilitiesLostRow" type="HBoxContainer" parent="VBox/StatsPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBox/StatsPanel/VBox/FacilitiesLostRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Facilities Lost:"
horizontal_alignment = 2

[node name="Value" type="Label" parent="VBox/StatsPanel/VBox/FacilitiesLostRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0"

[node name="EnemiesKilledRow" type="HBoxContainer" parent="VBox/StatsPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBox/StatsPanel/VBox/EnemiesKilledRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Enemies Eliminated:"
horizontal_alignment = 2

[node name="Value" type="Label" parent="VBox/StatsPanel/VBox/EnemiesKilledRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0"

[node name="PerfectBonusRow" type="HBoxContainer" parent="VBox/StatsPanel/VBox"]
visible = false
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBox/StatsPanel/VBox/PerfectBonusRow"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Perfect Defense Bonus:"
horizontal_alignment = 2

[node name="Value" type="Label" parent="VBox/StatsPanel/VBox/PerfectBonusRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "+2"

[node name="RewardsPanel" type="PanelContainer" parent="VBox"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="VBox/RewardsPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="VBox/RewardsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Rewards"
horizontal_alignment = 1

[node name="RewardsContent" type="VBoxContainer" parent="VBox/RewardsPanel/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="CrewLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Team Status"
horizontal_alignment = 1

[node name="CrewPanel" type="PanelContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="CrewStatus" type="HBoxContainer" parent="VBox/CrewPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="BottomBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="ContinueBtn" type="Button" parent="VBox/BottomBar"]
custom_minimum_size = Vector2(200, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "CONTINUE"
